Ajustando las secciones: header, portafolio, universidad, contacto y footer con media queries

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <link rel="icon" type = "image/png" href="images/favicon_fsc.png">
    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet">
    <link rel="stylesheet" href="css/estilos.css">
+   <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
     <header class="header">
@@ -30,14 +31,14 @@
         </nav>
       </div>
     </header>
-    <section class="hero">
+<!--     <section class="hero">
       <div class="container">
         <h1>
           ¡Hola! Soy <strong> Felipe</strong>. <br /> <strong>publicista</strong> apasionado <br /> por el mundo digital, <br />  audiovisual y la lectura.
         </h1>
-        <img class="hero-image" src = "images/hero.png" height= "500" alt="imagen principal del sitio">
+        <img class="hero-image" src = "images/hero.png" height= "500" alt="Imagen principal del sitio">
       </div>
-    </section>
+    </section> -->
     <section id="portafolio" class="portfolio">
       <div class="container">
         <h2>Portafolio (Proyectos Destacados)</h2>
@@ -126,12 +127,10 @@
     <footer class="footer">
       <div class="container">
         <div>
-         <p>
-           Curso de desarrollo web online • <img height= "20" src="images/logo-platzi-negativo.png" alt="Platzi">
-         </p>
+           <img height= "30" src="images/isotipo_felipe_sc.svg" alt="Felipe Sc" />
         </div>
         <div>
-          <p>Designed by <a href="https://twitter.com/_FelipeSc_" target="_blank">@_felipesc_</a></p>
+          <p>Designed with ❤ by <a href="https://twitter.com/_FelipeSc_" target="_blank">@_felipesc_</a></p>
         </div>
       </div>
     </footer>
