Agregando proyecto ilustración vectorial y actualización de hero

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="hero">
       <div class="container">
         <h1>
-          ¡Hola! Soy <strong> Felipe</strong>. <br /> <strong>Publicista</strong> apasionado <br /> por el mundo digital, <br />  audiovisual y la lectura.
+          ¡Hola! Soy <strong> Felipe</strong>. <br /> <strong>Publicista </strong> y <strong>arquitecto <br />Front-End</strong> apasionado <br />por el mundo digital y <br />  audiovisual.
         </h1>
         <img class="hero-image" src = "images/hero.png" height= "500" alt="Imagen principal del sitio">
       </div>
@@ -61,8 +61,18 @@
             <p class="project-date"><small><strong>Fecha: </strong>10/03/2017</small></p>
             <p class="project-description">Proyecto que nace de la solicitud específica del cliente ADM. Micro empresa de consultoría y asesoría de imagen publicitaria.</p>
           </div>
-                <figure class="project-imageWrapper">
+          <figure class="project-imageWrapper">
             <img class="project-image" width="300" src="images/imagologo_adm.png" alt="imagologo Restrepo Comercial">
+          </figure>
+        </article>
+        <article class="project">
+          <div class="project-details">
+            <h3 class="project-title">Ilustración vectorial</h3>
+            <p class="project-date"><small><strong>Fecha: </strong>02/04/2019</small></p>
+            <p class="project-description">Con la intención de aprender sobre <strong>ilustración vectorial </strong> nació este poster con un concepto retro.</p>
+          </div>
+          <figure class="project-imageWrapper">
+            <img class="project-image" width="300" src="images/ilustracion.png" alt="ilustración">
           </figure>
         </article>
       </div>
