--- a/index.html
+++ b/index.html
@@ -146,8 +146,7 @@
         </div>
       </div>
     </footer>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/estilos.min.css">
     <script>
       const ipad = window.matchMedia('screen and (max-width: 767px)');
       const menu = document.querySelector('.menu');
@@ -182,5 +181,6 @@
         }
       }
     </script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet">
   </body>
 </html>
