--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
       <div class="container">
         <figure class="logo">
-          <img width= "100" src="images/header.png" alt="Logo de http://felipesc.com">
+          <img width= "100" src="images/felipesc.svg" alt="Logo de http://felipesc.com">
         </figure>
         <nav class="menu">
           <ol>
@@ -53,7 +53,7 @@
                 complementa el mensaje viendo al ojo como la ventana al mundo. De una manera metafórica.</p>
           </div>
                 <figure class="project-imageWrapper">
-            <img class="project-image" width="300" src="images/restrepo_comercial.jpg" alt="imagologo Restrepo Comercial">
+            <img class="project-image" width="300" src="images/restrepo_comercial.png" srcset="images/restrepo_comercial.png, images/restrepo_comercial@2x.png 2x"" alt="imagologo Restrepo Comercial">
           </figure>
         </article>
         <article class="project">
@@ -63,7 +63,7 @@
             <p class="project-description">Proyecto que nace de la solicitud específica del cliente ADM. Micro empresa de consultoría y asesoría de imagen publicitaria.</p>
           </div>
           <figure class="project-imageWrapper">
-            <img class="project-image" width="300" src="images/imagologo_adm.png" alt="imagologo Restrepo Comercial">
+            <img class="project-image" width="300" src="images/imagologo_adm.png" srcset="images/imagologo_adm.png, images/imagologo_adm@2x.png 2x" alt="imagologo Restrepo Comercial">
           </figure>
         </article>
         <article class="project">
@@ -73,7 +73,7 @@
             <p class="project-description">Con la intención de aprender sobre <strong>ilustración vectorial </strong> nació este poster con un concepto retro.</p>
           </div>
           <figure class="project-imageWrapper">
-            <img class="project-image" width="300" src="images/ilustracion.png" alt="ilustración">
+            <img class="project-image" width="300" src="images/ilustracion.png" srcset="images/ilustracion.png, images/ilustracion@2x.png 2x" alt="ilustración">
           </figure>
         </article>
       </div>
@@ -85,7 +85,7 @@
       <div class="container">
         <article class="activity">
           <figure class="activity-imageContainer">
-            <img class="activity-image" src= "images/activity_poster_sin_cordura.jpg" width="300" alt="Sin Cordura" />
+            <img class="activity-image" src= "images/activity_poster_sin_cordura.png" srcset="images/activity_poster_sin_cordura.png, images/activity_poster_sin_cordura@2x.png 2x"" width="300" alt="Sin Cordura" />
           </figure>
           <div class="activity-detail">
             <h3 class="activity-title">¡Sin Cordura!</h3>
@@ -94,7 +94,7 @@
         </article>
         <article class="activity">
             <figure class="activity-imageContainer">
-              <img class="activity-image" src= "images/avianca.png" width="300" alt="Sin Cordura" />
+              <img class="activity-image" src= "images/avianca.png" srcset= "images/avianca.png, images/avianca@2x.png 2x" width="300" alt="Avianca" />
             </figure>
             <div class="activity-detail">
               <h3 class="activity-title">Tocando el cielo</h3>
@@ -103,7 +103,7 @@
         </article>
         <article class="activity">
             <figure class="activity-imageContainer">
-              <img class="activity-image" src= "images/helado_casero.jpg" width="300" alt="Sin Cordura" />
+              <img class="activity-image" src= "images/helado_casero.png" srcset= "images/helado_casero.png, images/helado_casero@2x.png 2x" width="300" alt="Sin Cordura" />
             </figure>
             <div class="activity-detail">
               <h3 class="activity-title">Cambio de empaque</h3>
@@ -112,7 +112,7 @@
         </article>
         <article class="activity">
             <figure class="activity-imageContainer">
-              <img class="activity-image" src= "images/a_thousand_suns.jpg" width="300" alt="Sin Cordura" />
+              <img class="activity-image" src= "images/a_thousand_suns.png" srcset= "images/a_thousand_suns.png, images/a_thousand_suns@2x.png 2x" width="300" alt="Sin Cordura" />
             </figure>
             <div class="activity-detail">
               <h3 class="activity-title">Portada Disco <br />A Thousand Suns</h3>
