--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h1>
           ¡Hola! Soy <strong> Felipe</strong>. <br /> <strong>Publicista </strong> y <strong>arquitecto <br />Front-End</strong> apasionado <br />por el mundo digital y <br />  audiovisual.
         </h1>
-        <img class="hero-image" src = "images/hero.png" height= "500" alt="Imagen principal del sitio">
+        <img class="hero-image" src = "images/hero-fsc.png" height= "500" alt="Imagen principal del sitio">
       </div>
     </section>
     <section id="portafolio" class="portfolio">
