ajuste de la imagen y del copy del hero

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="hero">
       <div class="container">
         <h1>
-          ¡Hola! Soy <strong> Felipe</strong>. <br /> <strong>Publicista </strong> y <strong>arquitecto <br />Front-End</strong> apasionado <br />por el mundo digital y <br />  audiovisual.
+          ¡Hola! Soy <strong> Felipe</strong>. <br /> <strong>Arquitecto Front-End </strong> <br /> y <strong>publicista </strong> apasionado <br />por el mundo digital y <br />  audiovisual.
         </h1>
         <img class="hero-image" src = "images/hero-fsc.png" height= "500" alt="Imagen principal del sitio">
       </div>
@@ -149,7 +149,7 @@
         </div>
       </div>
     </footer>
-    <link rel="stylesheet" href="css/estilos.min.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <script>
       const ipad = window.matchMedia('screen and (max-width: 767px)');
       const menu = document.querySelector('.menu');
